--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@kunukn/react-collapse": "^2.2.9",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@picocss/pico": "^1.3.3",
@@ -10,14 +11,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-collapse": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
+    "reactstrap": "^8.10.0",
     "redux": "^4.1.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
