--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "reactstrap": "^8.10.0",
     "redux": "^4.1.1",
     "styled-components": "^5.3.1",
+    "use-local-storage": "^2.2.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
